# gstreamer-test-klv

./: .gitignore  How2CompileGstreamer.md  README.md  main.cpp
Doc/: mkdocs.yml
Doc/custom_theme/: main.html
Doc/docs/: index.md
Doc/docs/Cmake/: cmake-demo-apps.md  cmake-gst-klv-decode-pipeline.md
Doc/docs/DemoApps/: gst-klv-decode-pipeline.md  gst-klv-encode-pipeline.md
Doc/docs/KLV/: klv-data-format.md  klv-in-stanag4609.md  klv-in-uas.md  klv.md  validating-stream.md
Doc/docs/KLV/images/: stanag4609.md
Doc/docs/VisualStudio/: vs-demo-apps.md  vs-project-manually.md  vs-project-props.md  vs-project.md
Doc/docs/VisualStudio/images/: vs-include.xcf
klv-decode/: .gitignore  CMakeLists.txt  README.md  main.cpp
klv-decode/Klv-decode-pipeline/: CMakeLists.txt  README.md  main.cpp
klv-decode/Klv-decode-simple/: main.cpp
klv-encode/: .gitignore  CMakeLists.txt  main.cpp
klv-encode/Klv-encode-adv/: CMakeLists.txt  README.md  main.cpp
klv-encode/Klv-encode-domain-socket/: CMakeLists.txt  Dockerfile  main.c
klv-encode/Klv-encode-min/: CMakeLists.txt  README.md  main.cpp
klv-encode/Klv-encode-network/: Dockerfile  Dockerfile copy
klv-encode/Klv-encode-network/.devcontainer/: devcontainer.json
klv-encode/klv-inject/: README.md  main.cpp
visual-studio-c/: misbcore-test.sln
visual-studio-c/gst-klv-test/: gst-klv-test.sln  gst-klv-test.vcxproj  gst-klv-test.vcxproj.filters  main-decode.cpp
visual-studio-c/misbcore-test/: misbcore-test.cpp  misbcore-test.sln  misbcore-test.vcxproj  misbcore-test.vcxproj.filters
